--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "url": "git+https://github.com/Frontify/free-trial-signup-form.git"
   },
   "author": "Frontify",
+  "engines": {
+    "node": ">=20.18.0"
+  },
   "bugs": {
     "url": "https://github.com/Frontify/free-trial-signup-form/issues"
   },
