--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "classnames": "^2.5.1",
     "js-cookie": "^3.0.5",
     "jstz": "^2.1.1",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hubspot-form": "^1.3.7",
+    "react-id-generator": "^3.0.2",
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0"
   },
