--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "axios-jsonp": "^1.0.4",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.4.4",
     "js-cookie": "^3.0.5",
     "jstz": "^2.1.1",
     "prop-types": "^15.8.1",
